fix spacing between blocks

--- a/assets/section-image-banner.css
+++ b/assets/section-image-banner.css
@@ -317,10 +317,6 @@
   margin-right: 0;
 }
 
-.banner__box > * + .banner__text {
-  margin-top: 1.5rem;
-}
-
 @media screen and (min-width: 750px) {
   .banner__box > * + .banner__text {
     margin-top: 2rem;
